@@ -1,0 +1,4 @@
+FROM httpd:2.4.12
+RUN apt-get update && apt-get install -y curl
+HEALTHCHECK --interval=1s --retries=90 CMD curl -f http://localhost
+COPY ./httpd.conf /usr/local/apache2/conf/httpd.conf
