@@ -4,8 +4,8 @@ HTTPD] servers.
 [float]
 === Compatibility
 
-The Apache metricsets were tested with Apache 2.4.20 and are expected to work with all versions
->= 2.2.31 and >= 2.4.16.
+The Apache metricsets were tested with Apache 2.4.12 and 2.4.20 and are expected to work with
+all versions >= 2.2.31 and >= 2.4.16.
 
 
 [float]
