@@ -1,2 +1,3 @@
 APACHE_HOST=apache
+APACHE_OLD_HOST=apache_2_4_12
 APACHE_PORT=80
