@@ -51,7 +51,39 @@ var (
 			"15": c.Float("Load15", s.Optional),
 		},
 	}
+
+	// Schema used till apache 2.4.12
+	schemaOld = s.Schema{
+		"total_accesses":   c.Int("Total Accesses"),
+		"total_kbytes":     c.Int("Total kBytes"),
+		"requests_per_sec": c.Float("ReqPerSec", s.Optional),
+		"bytes_per_sec":    c.Float("BytesPerSec", s.Optional),
+		"workers": s.Object{
+			"busy": c.Int("BusyWorkers"),
+			"idle": c.Int("IdleWorkers"),
+		},
+		"uptime": s.Object{
+			"uptime": c.Int("Uptime"),
+		},
+		"connections": s.Object{
+			"total": c.Int("ConnsTotal", s.Optional),
+			"async": s.Object{
+				"writing":    c.Int("ConnsAsyncWriting", s.Optional),
+				"keep_alive": c.Int("ConnsAsyncKeepAlive", s.Optional),
+				"closing":    c.Int("ConnsAsyncClosing", s.Optional),
+			},
+		},
+	}
 )
+
+func applySchema(event common.MapStr, fullEvent map[string]interface{}) *s.Errors {
+	applicableSchema := schema
+	if _, found := fullEvent["ServerUptimeSeconds"]; !found {
+		applicableSchema = schemaOld
+	}
+	_, err := applicableSchema.ApplyTo(event, fullEvent)
+	return err
+}
 
 // Map body to MapStr
 func eventMapping(scanner *bufio.Scanner, hostname string) (common.MapStr, *s.Errors) {
@@ -140,9 +172,8 @@ func eventMapping(scanner *bufio.Scanner, hostname string) (common.MapStr, *s.Er
 			"total":                  totalAll,
 		},
 	}
-	_, err := schema.ApplyTo(event, fullEvent)
 
-	return event, err
+	return event, applySchema(event, fullEvent)
 }
 
 /*
